--- a/BUSLayer/BUSLayer.csproj
+++ b/BUSLayer/BUSLayer.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaiVietBaiGiangBUS.cs" />
     <Compile Include="BaiVietDienDanBUS.cs" />
     <Compile Include="BinhLuanBUS.cs" />
     <Compile Include="BUS.cs" />
