--- a/DTOLayer/DTOLayer.csproj
+++ b/DTOLayer/DTOLayer.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataDTO\BaiVietBaiGiangDataDTO.cs" />
     <Compile Include="DataDTO\BaiVietDienDanDataDTO.cs" />
     <Compile Include="DataDTO\BinhLuanDataDTO.cs" />
     <Compile Include="DataDTO\KhoaHocDataDTO.cs" />
@@ -47,6 +48,7 @@
     <Compile Include="DataDTO\ChuDeDataDTO.cs" />
     <Compile Include="DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewDTO\BaiVietBaiGiangViewDTO.cs" />
     <Compile Include="ViewDTO\BaiVietDienDanViewDTO.cs" />
     <Compile Include="ViewDTO\BinhLuanViewDTO.cs" />
     <Compile Include="ViewDTO\ChuDeViewDTO.cs" />
