--- a/Helper/Helpers.csproj
+++ b/Helper/Helpers.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LCTHelper.cs" />
+    <Compile Include="NguoiDungHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BinhLuanHelper.cs" />
     <Compile Include="TapTinHelper.cs" />
