Them Phan Hoi-Dap

--- a/DTOLayer/DTOLayer.csproj
+++ b/DTOLayer/DTOLayer.csproj
@@ -42,7 +42,10 @@
     <Compile Include="DataDTO\BaiVietBaiGiangDataDTO.cs" />
     <Compile Include="DataDTO\BaiVietDienDanDataDTO.cs" />
     <Compile Include="DataDTO\BinhLuanDataDTO.cs" />
+    <Compile Include="DataDTO\HoiDapDiemDataDTO.cs" />
+    <Compile Include="DataDTO\CauHoiDataDTO.cs" />
     <Compile Include="DataDTO\KhoaHocDataDTO.cs" />
+    <Compile Include="DataDTO\TraLoiDataDTO.cs" />
     <Compile Include="DataDTO\NguoiDungDataDTO.cs" />
     <Compile Include="DataDTO\TapTinDataDTO.cs" />
     <Compile Include="DataDTO\ChuDeDataDTO.cs" />
@@ -51,8 +54,11 @@
     <Compile Include="ViewDTO\BaiVietBaiGiangViewDTO.cs" />
     <Compile Include="ViewDTO\BaiVietDienDanViewDTO.cs" />
     <Compile Include="ViewDTO\BinhLuanViewDTO.cs" />
+    <Compile Include="ViewDTO\HoiDapDiemViewDTO.cs" />
     <Compile Include="ViewDTO\ChuDeViewDTO.cs" />
+    <Compile Include="ViewDTO\TraLoiViewDTO.cs" />
     <Compile Include="ViewDTO\KhoaHocViewDTO.cs" />
+    <Compile Include="ViewDTO\CauHoiViewDTO.cs" />
     <Compile Include="ViewDTO\NguoiDungViewDTO.cs" />
     <Compile Include="ViewDTO\TapTinViewDTO.cs" />
   </ItemGroup>
