--- a/BUSLayer/BUSLayer.csproj
+++ b/BUSLayer/BUSLayer.csproj
@@ -43,6 +43,7 @@
     <Compile Include="BinhLuanBUS.cs" />
     <Compile Include="BUS.cs" />
     <Compile Include="KhoaHocBUS.cs" />
+    <Compile Include="HoiDapBUS .cs" />
     <Compile Include="NguoiDungBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
