--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -146,13 +146,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\fonts\Pe-icon-7-stroke.svg" />
+    <Content Include="Content\images\ChuDe\ChuDe.png" />
+    <Content Include="Content\images\ChuDe\MacDinh\he-thong.png" />
+    <Content Include="Content\images\ChuDe\MacDinh\khoa-hoc.png" />
+    <Content Include="Content\images\HeThong\HeThong.png" />
+    <Content Include="Content\images\KhoaHoc\KhoaHoc.png" />
     <Content Include="Content\images\LCT\AllSiteImages.png" />
     <Content Include="Content\images\LCT\AllSiteImages_temp.png" />
     <Content Include="Content\images\LCT\ChuDe\he-thong.png" />
     <Content Include="Content\images\LCT\ChuDe\khoa-hoc.png" />
     <Content Include="Content\images\LCT\mini_logo.png" />
     <Content Include="Content\scripts\BinhLuan\Khung.js" />
-    <Content Include="Content\scripts\ChuDe\QuanLy.js" />
+    <Content Include="Content\scripts\ChuDe\Khung.js" />
     <Content Include="Content\images\user-avatar.jpg" />
     <Content Include="Content\scripts\HoiDap\CauHoi.js" />
     <Content Include="Content\scripts\HoiDap\DatCauHoi.js" />
@@ -357,6 +362,9 @@
     <Content Include="Plugin\ckeditor\plugins\wsc\LICENSE.md" />
     <Content Include="Plugin\ckeditor\plugins\wsc\README.md" />
     <Content Include="Plugin\ckeditor\README.md" />
+    <Content Include="Content\images\ChuDe\ChuDe.psd" />
+    <Content Include="Content\images\HeThong\HeThong.psd" />
+    <Content Include="Content\images\KhoaHoc\KhoaHoc.psd" />
     <None Include="Project_Readme.html" />
     <Content Include="Views\LCT\Khung.cshtml" />
     <Content Include="Views\TrangChu\Index.cshtml" />
