--- a/BUSLayer/BUSLayer.csproj
+++ b/BUSLayer/BUSLayer.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GiaoTrinhBUS.cs" />
     <Compile Include="BaiTapNopBUS.cs" />
     <Compile Include="BaiVietBaiGiangBUS.cs" />
     <Compile Include="BaiVietBaiTapBUS.cs" />
