--- a/DAOLayer/DAOLayer.csproj
+++ b/DAOLayer/DAOLayer.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CotDiemDAO.cs" />
     <Compile Include="GiaoTrinhDAO.cs" />
     <Compile Include="BaiTapNopDAO.cs" />
     <Compile Include="BaiVietBaiGiangDAO.cs" />
@@ -52,7 +53,9 @@
     <Compile Include="NguoiDungDAO.cs" />
     <Compile Include="TapTinDAO.cs" />
     <Compile Include="ChuDeDAO.cs" />
-    <Compile Include="DAO.cs" />
+    <Compile Include="DAO.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
