--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -414,6 +414,8 @@
     <Content Include="Views\GiaoTrinh\_Item_Tao.cshtml" />
     <Content Include="Views\BaiVietDienDan\_Form.cshtml" />
     <Content Include="Views\BangDiem\Tao.cshtml" />
+    <Content Include="Views\BangDiem\CotDiem\_Item_Tao.cshtml" />
+    <Content Include="Views\BaiVietBaiGiang\_Form.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BUSLayer\BUSLayer.csproj">
