--- a/BUSLayer/BUSLayer.csproj
+++ b/BUSLayer/BUSLayer.csproj
@@ -36,9 +36,10 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CotDiemKHBUS.cs" />
+    <Compile Include="CotDiemBUS.cs" />
     <Compile Include="GiaoTrinhBUS.cs" />
     <Compile Include="BaiTapNopBUS.cs" />
     <Compile Include="BaiVietBaiGiangBUS.cs" />
