--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -397,16 +397,10 @@
     <Content Include="Views\HoiDap\_itemTraLoi.cshtml" />
     <Content Include="Views\KhoaHoc\_Khung.cshtml" />
     <Content Include="Views\BaiTapNop\_DanhSachNop.cshtml" />
-    <Content Include="Views\ChuDe\Khung\_DanhSach_Item.cshtml" />
-    <Content Include="Views\ChuDe\Khung\_DanhSach_PhamVi_Item.cshtml" />
-    <Content Include="Views\ChuDe\Khung\_Cay_Item.cshtml" />
-    <Content Include="Views\ChuDe\Khung\_Cay_Con_Item.cshtml" />
-    <Content Include="Views\ChuDe\Khung\_DanhSach.cshtml" />
-    <Content Include="Views\ChuDe\Khung\_DanhSach_PhamVi.cshtml" />
-    <Content Include="Views\ChuDe\Khung\_Cay_PhamVi_Item.cshtml" />
-    <Content Include="Views\ChuDe\Khung\_Cay_Con_PhamVi_Item.cshtml" />
-    <Content Include="Views\ChuDe\Khung\_Cay_HeThong_Item.cshtml" />
-    <Content Include="Views\ChuDe\Khung\_Cay_Con_HeThong_Item.cshtml" />
+    <Content Include="Views\ChuDe\_DanhSach_Item.cshtml" />
+    <Content Include="Views\ChuDe\_Cay_Item.cshtml" />
+    <Content Include="Views\ChuDe\_Cay_Con_Item.cshtml" />
+    <Content Include="Views\ChuDe\_DanhSach.cshtml" />
     <Content Include="Views\ChuDe\_Chon.cshtml" />
     <Content Include="Views\BaiTapNop\_Khung.cshtml" />
     <Content Include="Views\HoiDap\TaoCauHoi.cshtml" />
