--- a/DTOLayer/DTOLayer.csproj
+++ b/DTOLayer/DTOLayer.csproj
@@ -42,11 +42,14 @@
     <Compile Include="BangCapNhat.cs" />
     <Compile Include="DTO.cs" />
     <Compile Include="Form.cs" />
+    <Compile Include="GiaoTrinhDTO.cs" />
     <Compile Include="KetQua.cs" />
     <Compile Include="LienKet.cs" />
+    <Compile Include="NhomNguoiDung_QuyenDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CotDiemDTO.cs" />
-    <Compile Include="GiaoTrinhDTO.cs" />
+    <Compile Include="NhomNguoiDung.cs" />
+    <Compile Include="QuyenDTO.cs" />
     <Compile Include="BaiTapNopDTO.cs" />
     <Compile Include="BaiVietBaiGiangDTO.cs" />
     <Compile Include="BaiVietBaiTapDTO.cs" />
