--- a/DTOLayer/DTOLayer.csproj
+++ b/DTOLayer/DTOLayer.csproj
@@ -45,6 +45,7 @@
     <Compile Include="GiaoTrinhDTO.cs" />
     <Compile Include="KetQua.cs" />
     <Compile Include="LienKet.cs" />
+    <Compile Include="NhomNguoiDung_NguoiDungDTO.cs" />
     <Compile Include="NhomNguoiDung_QuyenDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CotDiemDTO.cs" />
