--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -420,6 +420,9 @@
     <Content Include="Views\Quyen\_DanhSach_Quyen.cshtml" />
     <Content Include="Views\Quyen\_Form_Nhom.cshtml" />
     <Content Include="Views\Quyen\_Item_Nhom.cshtml" />
+    <Content Include="Views\Quyen\_DanhSach_NguoiDung_Tim.cshtml" />
+    <Content Include="Views\Quyen\_Item_NguoiDung.cshtml" />
+    <Content Include="Views\Quyen\_DanhSach_NguoiDung.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BUSLayer\BUSLayer.csproj">
