--- a/Helper/Helpers.csproj
+++ b/Helper/Helpers.csproj
@@ -43,6 +43,7 @@
     <Compile Include="LCTHelper.cs" />
     <Compile Include="NguoiDungHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuyenHelper.cs" />
     <Compile Include="TapTinHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
