--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -358,6 +358,35 @@
     <Content Include="Plugin\ckeditor\skins\office2013\images\lock.png" />
     <Content Include="Plugin\ckeditor\skins\office2013\images\refresh.png" />
     <Content Include="Plugin\ckeditor\styles.js" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\1.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\10.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\11.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\12.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\13.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\14.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\15.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\16.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\17.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\18.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\19.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\2.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\20.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\21.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\22.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\23.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\24.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\25.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\26.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\27.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\28.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\29.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\3.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\4.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\5.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\6.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\7.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\8.png" />
+    <Content Include="Uploads\ChuDe_HinhDaiDien\KhoaHoc_HinhDaiDien\9.png" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
